--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     justify-content: stretch;
  } */
 
-h1 {
+ h1 {
     font-family: "M PLUS Rounded 1c", sans-serif;
     font-size: 45px;
 }
@@ -13,6 +13,12 @@ h1 {
 h2 {
     font-family: "M PLUS Rounded 1c", sans-serif;
     font-size: 30px;
+}
+
+h3 {
+    font-family: "M PLUS Rounded 1c", sans-serif;
+    font-size: 15px;
+    color: #aaaaaa;
 }
 
 #manyOnsens {
@@ -37,23 +43,28 @@ h2 {
     left:12%;
 }
 
-/* .h_line1 {
-    width: 90%;
-    height: 1px;
-    position: absolute;
-    top: 40%;
-    transform: translateY(-50%);
-    background: #000000;
+
+.image-container {
+    position: relative;
+    display: inline-block;
 }
 
-.h_line2 {
-    width: 90%;
-    height: 1px;
+.name {
     position: absolute;
-    top: 72%;
-    transform: translateY(-50%);
-    background: #000000;
-} */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white; 
+    background-color: rgba(0, 0, 0, 0.5); 
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 16px; 
+    display: none;
+}
+
+.image-container:hover .name {
+    display: block;
+}
 
 #index_minerals {
     position: absolute;
@@ -148,9 +159,13 @@ p {
     width: 100px; 
     height: 200px; 
     overflow: hidden;
+    cursor: pointer;
 }
 
+
+
 .text-content {
+    z-index: 1;
     font-family: Arial, Helvetica, sans-serif;
     text-wrap: wrap;
     font-family: "M PLUS Rounded 1c", sans-serif;
@@ -175,6 +190,7 @@ p {
     font-weight: bold;
     pointer-events: all;
     float: right;
+    cursor: pointer;
 }
 
 .mineralsIcon::before {
