--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,4 @@
- /* body {
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    justify-content: stretch;
- } */
+
 
  h1 {
     font-family: "M PLUS Rounded 1c", sans-serif;
@@ -21,27 +16,301 @@ h3 {
     color: #aaaaaa;
 }
 
+
 #manyOnsens {
     font-size: 25px;
     font-family: "M PLUS Rounded 1c", sans-serif;
-    left:20%;
 }
+
 
 #温泉 {
     font-size: 100px;
     font-family: "M PLUS Rounded 1c", sans-serif;
     position: absolute;
-    top: 0%;
-    left:15%;
+    bottom: -78px;
 }
 
 #ofJapan {
     font-size: 51px;
     font-family: "M PLUS Rounded 1c", sans-serif;
     position: absolute;
-    top: 23%;
-    left:12%;
+    bottom: -100px;
 }
+
+.title {
+    height: 20vh;
+    position: relative;
+}
+
+.sidenav {
+    height: 100%;
+    width: 35vmin;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #ffffff;
+    overflow-x: hidden; 
+    padding-top: 20px;
+    padding-left: 20px;
+  }
+  
+
+#map {
+    height: 35%;
+    width: 95%;
+    border-radius: 5%;
+    position: absolute;
+    bottom: 225; 
+    left: 50%;
+    transform: translateX(-50%); 
+}
+
+
+#grid-container-parent {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-gap: 15px;
+    grid-row-gap: 60px;
+    width: 100%;
+    position: absolute;
+    top:0%;
+}
+
+.index_text {
+    font-family: "M PLUS Rounded 1c", sans-serif;
+}
+
+
+#index_minerals {
+    position: absolute;
+    top: 80%;
+}
+
+#mineralsIcon {
+    position: absolute;
+    top: 76%;
+    left: 20%;
+    width: 22px; 
+    height: 22px;
+}
+
+#index_year {
+    position: absolute;
+    top: 80%;
+    left: 55%;
+}
+
+#yearIcon {
+    position: absolute;
+    top: 76%;
+    left: 72%;
+    width: 22px; 
+    height: 22px;
+}
+
+#index_temperature {
+    position: absolute;
+    top: 90%;
+}
+
+#temperatureIcon {
+    position: absolute;
+    top: 86%;
+    left: 20%;
+    width: 22px; 
+    height: 22px;
+}
+
+#index_effects {
+    position: absolute;
+    top: 90%;
+    left: 55%;
+}
+
+#effectsIcon {
+    position: absolute;
+    top: 86%;
+    left: 72%;
+    width: 22px; 
+    height: 22px;
+}
+
+.text-content {
+    z-index: 1;
+    text-wrap: wrap;
+    font-family: "M PLUS Rounded 1c", sans-serif;
+    position: fixed;
+    display:none;
+    background-color: #f8fcff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    padding-left: 1cm;
+    padding-right: 1cm;
+    padding-top: 0.5cm;
+    padding-bottom:0.5cm;
+    border-radius: 10%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    /* pointer-events: none; */
+}
+
+#onsenlocation {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    padding-left: 40vmin;
+    box-sizing: border-box;
+    /* width: calc(100%-35vmin); */
+}
+
+
+        @media (max-width: 375px){  
+
+            #grid-container-parent {
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: auto; 
+                top: 52%;
+                left:0;
+                height: 100%;
+                position: relative;
+                overflow: scroll;
+                padding:20px;
+                box-sizing: border-box;
+                grid-row-gap: 25px;
+            }
+
+            #onsenlocation {
+                position: relative;
+                padding-top: 50dvh;
+                padding-left:0;
+            }
+
+            .sidenav {
+                height: 45%;
+                width: 100%;
+
+            }
+
+            .title {
+                height: 10vh;
+            }
+
+            #manyOnsens {
+                font-size: 20px;
+                position: absolute;
+                top: -13px;
+                left: 25px;
+            }
+            
+            
+            #温泉 {
+                /* font-size: 50px;
+                position: absolute;
+                left: 150px;
+                bottom: -30px; */
+                opacity: 0;
+            }
+            
+            #ofJapan {
+                font-size: 20px;
+                position: absolute;
+                top: -13px;
+                left: 215px;
+            }
+
+
+            #index_minerals {
+                position: absolute;
+                top: 25%;
+            }
+
+            #mineralsIcon {
+                position: absolute;
+                top: 18%;
+                left: 15%;
+                width: 22px; 
+                height: 22px;
+            }
+
+            #index_year {
+                position: absolute;
+                top: 45%;
+                left: 5%;
+            }
+
+            #yearIcon {
+                position: absolute;
+                top: 38%;
+                left: 15%;
+                width: 22px; 
+                height: 22px;
+            }
+
+            #index_temperature {
+                position: absolute;
+                top: 67%;
+                left: 5%;
+            }
+
+            #temperatureIcon {
+                position: absolute;
+                top: 60%;
+                left: 15%;
+                width: 22px; 
+                height: 22px;
+            }
+
+            #index_effects {
+                position: absolute;
+                top: 87%;
+                left: 5%;
+            }
+
+            #effectsIcon {
+                position: absolute;
+                top: 80%;
+                left: 15%;
+                width: 22px; 
+                height: 22px;
+            }
+
+
+            #map {
+                height: 230px;
+                width: 55%;
+                border-radius: 5%;
+                position: absolute;
+                bottom:20px; /* Adjust bottom position as needed */
+                left: 65%;
+            }
+
+            .text-content {
+                z-index: 1;
+                text-wrap: wrap;
+                font-family: "M PLUS Rounded 1c", sans-serif;
+                position: fixed;
+                display:none;
+                background-color: #f8fcff;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+                padding-left: 0.5cm;
+                padding-right: 0.5cm;
+                padding-top: 0.25cm;
+                padding-bottom:0.25cm;
+                width: 100%;
+                top: unset;
+                bottom: 0;
+                transform: none;
+                left: 0;
+                box-sizing: border-box;
+                border-radius: 24px;
+                height: 50dvh;
+            }
+
+            
+            
+        }
 
 
 .image-container {
@@ -66,86 +335,11 @@ h3 {
     display: block;
 }
 
-#index_minerals {
-    position: absolute;
-    top: 80%;
-    font-size: 15px;
-    font-family: "M PLUS Rounded 1c", sans-serif;
-}
-
-#mineralsIcon {
-    position: absolute;
-    top: 76%;
-    left: 20%;
-    width: 22px; 
-    height: 22px;
-}
-
-#index_year {
-    position: absolute;
-    top: 80%;
-    left: 55%;
-    font-size: 15px;
-    font-family: "M PLUS Rounded 1c", sans-serif;
-}
-
-#yearIcon {
-    position: absolute;
-    top: 76%;
-    left: 72%;
-    width: 22px; 
-    height: 22px;
-}
-
-#index_temperature {
-    position: absolute;
-    top: 90%;
-    font-size: 15px;
-    font-family: "M PLUS Rounded 1c", sans-serif;
-}
-
-#temperatureIcon {
-    position: absolute;
-    top: 86%;
-    left: 20%;
-    width: 22px; 
-    height: 22px;
-}
-
-#index_effects {
-    position: absolute;
-    top: 90%;
-    left: 55%;
-    font-size: 15px;
-    font-family: "M PLUS Rounded 1c", sans-serif;
-}
-
-#effectsIcon {
-    position: absolute;
-    top: 86%;
-    left: 72%;
-    width: 22px; 
-    height: 22px;
-}
-
-#onsenlocation {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    padding-left: 40vmin;
-    box-sizing: border-box;
-    /* width: calc(100%-35vmin); */
-}
 
 p {
     pointer-events: none;
 }
 
-#map {
-    height: 250px;
-    top: 27%;
-    border-radius: 5%;
-}
 
 .onsen-item {
     padding: 1cm;
@@ -163,26 +357,6 @@ p {
 }
 
 
-
-.text-content {
-    z-index: 1;
-    font-family: Arial, Helvetica, sans-serif;
-    text-wrap: wrap;
-    font-family: "M PLUS Rounded 1c", sans-serif;
-    position: fixed;
-    display:none;
-    background-color: #f8fcff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    padding-left: 1cm;
-    padding-right: 1cm;
-    padding-top: 0.5cm;
-    padding-bottom:0.5cm;
-    border-radius: 10%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    /* pointer-events: none; */
-}
 
 .ebcf_close {
     color: #aaaaaa;
@@ -227,47 +401,10 @@ p {
 
 
 
-/* 
-.sidenav {
-    height: 100%;
-    width: 35vmin;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #ffffff;
-    overflow-x: hidden; 
-    padding-top: 20px;
-    padding-left: 20px;
-  }
-
-  @media (max-width: 320px) {
-    .sidenav {
-        width: 15vw; 
-    } */
-/* } */
-
-
-
 .grid-container img {
     width: 100%;
     object-fit: cover;
 
 };
 
-  #grid-container-parent {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-gap: 15px;
-    grid-row-gap: 60px;
-    height:auto;
-}
 
-@media (max-width: 375) {
-    #grid-container-parent {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr) !important;
-        grid-template-rows: auto; 
-    }
-}
